# test-ptl-action-training-1

./: pyproject.toml
.github/workflows/: build.yaml  greetings-pr.yaml  greetings.yaml  test.yaml
src/test_ptl_action_training_1/: __init__.py
workflow_back/: greetings.yaml
